# ViVidPipeline

./: .gitignore  README.md
api/: .gitignore  README.md  main.py  pyproject.toml
api/pipelines/: pipelines_router.py
api/pipelines/preview/: clear_cache.py  preview_router.py  youtube.py
api/pipelines/sre/: audio_matching_handler.py  session_handler.py  sre_router.py
api/pipelines/sre/input/: handler.py  original.py
api/pipelines/sre/segmentation/: handler.py
api/pipelines/sre/session/: handler.py  initialize.py  paths.py  reset.py  session.py  status.py
api/proc/audio_engineering/: match_segment_original.py  plot.py  preset.py  source.py
api/proc/preview/: clear_cache.py  youtube.py
api/proc/segmentation/: extraction.py  main.py  matcher.py  plot.py  pyscenedetect.py  source.py
api/proc/segmentatioon/: PySceneDetect.py
api/proc/sre/: paths.py
api/proc/sre/audio_matching/: extracter.py  ffprobe.py  main.py  scope.py  super_segments.py
api/proc/sre/audio_matching/modules/: corrections.py  extraction.py  matcher.py  plot.py  pyscenedetect.py  rebuild.py  source.py
api/proc/sre/session/: initialize.py  paths.py  status.py
api/proc/sre/stages/: extracter.py  matcher.py  parameters.py  pyscenedetect.py  session.py  source.py  super_segment_plot.py  super_segments.py
api/routes/pipeline/: router.py
api/routes/pipeline/reconstruct/: handler.py
api/routes/pipeline/session/: handler.py
api/routes/pipeline/sre/: router.py
api/session/: session.json
api/session_mockup/: session.json
api/session_mockup/segmentation/: scope.json  segments.json
(+24 files in other folders)
