[project]
name = "vivid-api"
version = "0.1.0"
description = "Viral Video API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "scenedetect>=0.7",
    "uvicorn[standard]>=0.46.0",
    "yt-dlp>=2026.3.17",
]
